@@ -1,5 +1,5 @@
 /*
-   $Header: /cvs/src/tdl/add.c,v 1.15 2003/04/14 23:16:59 richard Exp $
+   $Header: /cvs/src/tdl/add.c,v 1.16 2003/04/14 23:19:25 richard Exp $
   
    tdl - A console program for managing to-do lists
    Copyright (C) 2001  Richard P. Curnow
@@ -244,8 +244,10 @@ static int internal_postpone_open(char **x, time_t when)/*{{{*/
   while (*x) {
     do_descendents = include_descendents(*x); /* May modify *x */
     n = lookup_node(*x, 0, NULL);
-    n->arrived = when;
-    if (do_descendents) modify_tree_arrival_time(n, when);
+    if (n) {
+      n->arrived = when;
+      if (do_descendents) modify_tree_arrival_time(n, when);
+    }
     x++;
   }
   return 0;
