@@ -2,6 +2,7 @@ NEW IN VERSION 1.4
 
 - Add "defer" command
 - Remove start-time editing from "edit" command
+- Bug fix : bad path expression with postpone used to segfault
 
 NEW IN VERSION 1.3.1
 
@@ -93,4 +94,4 @@ NEW IN VERSION 0.7
 
 - Add tdlg to do log as a single command name.
 
-$Header: /cvs/src/tdl/NEWS,v 1.16 2003/04/14 23:16:59 richard Exp $
+$Header: /cvs/src/tdl/NEWS,v 1.17 2003/04/14 23:19:25 richard Exp $
